# py-obsidian-tools

./: .env.example  .gitignore  README.md  pyproject.toml
docs/README/: README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_TW.md  README_ZH.md
specs/001-chromadb-vector-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chromadb-vector-search/contracts/: mcp-tools.md
src/: __init__.py  indexer.py  main.py
src/libs/: __init__.py  client.py  config.py  exceptions.py  models.py  utils.py
src/libs/vectorstore/: __init__.py  chunker.py  embeddings.py  store.py
