[project]
name = "pyobsidianmcp"
version = "0.1.0"
description = "MCP server for Obsidian via Local REST API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "rmc8" }
]
keywords = ["mcp", "obsidian", "ai", "llm", "claude"]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.22.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
pyobsidianmcp = "src.main:main"

[project.urls]
Homepage = "https://github.com/rmc8/pyobsidianmcp"
Repository = "https://github.com/rmc8/pyobsidianmcp"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
