[project]
name = "py-obsidian-mcp"
version = "0.1.1"
description = "MCP server for Obsidian via Local REST API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "rmc8" }]
keywords = ["mcp", "obsidian", "ai", "llm", "claude"]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.22.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
pyobsidianmcp = "src.main:main"
pyobsidian-index = "src.indexer:main"

[project.optional-dependencies]
vector = ["chromadb>=0.4.0", "semantic-text-splitter>=0.18.0"]
vector-openai = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "openai>=1.0.0",
]
vector-google = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "google-generativeai>=0.3.0",
]
vector-cohere = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "cohere>=5.0.0",
]
vector-all = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "cohere>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/rmc8/pyobsidianmcp"
Repository = "https://github.com/rmc8/pyobsidianmcp"

[dependency-groups]
dev = ["isort>=7.0.0", "ruff>=0.14.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
