[project]
name = "py-obsidian-tools"
version = "0.1.5"
description = "MCP server for Obsidian via Local REST API"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "rmc8" }]
maintainers = [{ name = "rmc8" }]
keywords = ["mcp", "obsidian", "ai", "llm", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.14.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
py-obsidian-tools = "src.main:main"
pyobsidian-index = "src.indexer:main"

[project.optional-dependencies]
vector = ["chromadb>=0.4.0", "semantic-text-splitter>=0.18.0"]
vector-openai = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "openai>=1.0.0",
]
vector-google = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "google-generativeai>=0.3.0",
]
vector-cohere = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "cohere>=5.0.0",
]
vector-all = [
    "chromadb>=0.4.0",
    "semantic-text-splitter>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "cohere>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/rmc8/py-obsidian-tools"
Repository = "https://github.com/rmc8/py-obsidian-tools"
Issues = "https://github.com/rmc8/py-obsidian-tools/issues"
Documentation = "https://github.com/rmc8/py-obsidian-tools#readme"

[dependency-groups]
dev = ["isort>=7.0.0", "ruff>=0.14.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
